2008-02-16  John Robeson  <johnny@localmomentum.net>

     fix an indent in lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      lib/cache.py
      lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      admin-tool/profilesdialog.py
      lib/dirmonitor.py
      lib/storage.py
      lib/userpofile.py
      lib/sources/paneldelegate.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * remove gnomesu from desktop.in 
      Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=479771

2008-02-05  John Robeson  <johnny@localmomentum.net>

    * remove deprecated encoding key in desktop.in
    * add some X-GNOME keys to desktop.in

2008-01-30  John Robeson  <johnny@localmomentum.net>

    update gentoo support in configure.ac

2008-01-21  John Robeson  <johnny@localmomentum.net>

	typo fix mozilla_bookmarks.py s/implict_close_tags/implicit_close_tags/
    actually pass the excluded attributes  

2008-01-19  Hans Petter Jansson  <hpj@novell.com>

	Actual 2.21.0 release made here.

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* sabayon.spec.in: Removed; this specfile is really obsolete anyway.

	* Makefile.am: Remove references to the specfile.

2008-01-17  John Robeson <johnny@localmomentum.net>

    Make mandatory attribute in metadata xml files work
    Patch from https://bugzilla.redhat.com/show_bug.cgi?id=253996
    by Josko Plazonic

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.21.0.

	* NEWS: Prepare for 2.21.0.

2008-01-15  John Robeson <johnny@localmomentum.net>

    Add more ignored files/directories to lib/config.py.in

2008-01-06  John Robeson <johnny@localmomentum.net>

    Change install xinitrc to no for slackware

2008-01-06  John Robeson <johnny@localmomentum.net>

    Make sabayon work on slackware

    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=497471
    patch by Jared
